<resources>
    <string name="group_activity_animations">animations</string>
    <string name="group_activity_customview">customviews</string>
    <string name="group_activity_systemview">systemviews</string>
    <string name="group_activity_testgroup">testgroup</string>
    <!--activity标签-->
    <string name="app_name">AndroidTools</string>
    <string name="label_mian">主界面</string>
    <string name="label_animations">动画效果</string>
    <string name="label_customview">自定义View</string>
    <string name="label_test">测试</string>
    <string name="label_xml">xml解析</string>
    <string name="label_http">原生Http</string>
    <string name="label_testdialog">对话框</string>
    <string name="label_testfresco">Fresco的使用</string>
    <string name="label_testscheme">Scheme启动app</string>
    <string name="label_testwebview">自定义Webview</string>
    <string name="label_explosionparticle">粒子爆炸效果</string>
    <string name="label_shadow">阴影效果</string>
    <string name="label_systemview">系统的View</string>
    <string name="label_testgroup">测试组</string>
    <string name="label_appinfo">App信息展示</string>

    <!--自定义View-->
    <string name="label_switch">开关选择器</string>
    <string name="label_flow">测量子布局的宽度，换行</string>
    <string name="label_circlewave">水波纹控件</string>
    <string name="label_marquee">跑马灯效果</string>
    <string name="label_calendar">日历</string>
    <string name="label_progress">进度条</string>
    <string name="label_ripple">涟漪效果</string>
    <string name="label_drawboard">画板</string>
    <string name="label_arcring">圆环效果</string>
    <string name="label_flowchar">流动的字符</string>
    <string name="label_timeclock">时钟</string>
    <string name="label_dialog">对话框展示</string>
    <string name="label_zoomdrag">拖拽缩放展示</string>
    <string name="label_xlist">刷新控件</string>
    <string name="label_keyboard">自定义键盘</string>

    <!--动画效果-->
    <string name="label_add2cart">添加到购物车动画</string>
    <string name="label_jitter">抖动效果</string>
    <string name="label_base_animation">基本的动画</string>
    <string name="label_bubble">点赞冒泡效果</string>

    <!-- 系统的View-->
    <string name="label_tablayout">TabLayout的使用</string>
    <string name="label_drawerlayout">DrawerLayout的使用</string>
    <string name="label_coordinatorlayout">CoordinatorLayout的使用</string>
    <string name="label_vector">矢量图</string>
    <string name="label_immersive">沉浸式模式</string>
    <string name="label_card_viewpager">ViewPager卡片效果</string>
    <string name="label_fullscreen">全屏(去除下方导航栏)</string>
    <string name="label_statuscolor">状态栏颜色修改(API>=19)</string>
    <string name="label_editcovered">软键盘遮挡问题</string>
    <string name="label_tabhgost">TabHost的使用</string>

    <string name="str_parser_dom">DOM解析</string>
    <string name="str_parser_dom4J">dom4j解析</string>
    <string name="str_parser_jdom">jdom解析</string>
    <string name="str_parser_sax">sax解析</string>
    <string name="str_parser_pull">pull解析</string>
    <string name="str_parser_create">xml创建</string>
    <string name="str_submit">确定</string>
    <string name="str_loadingdialog">加载对话框</string>
    <string name="str_scheme_testscheme">zxl_tools</string>
    <string name="str_jump">跳转</string>
    <string name="str_scheme_authority">authority</string>
    <string name="str_scheme_path">path</string>
    <string name="str_scheme_query">query</string>
    <string name="str_scheme_fragment">fragment</string>
    <string name="str_start_timer">开启计时器</string>
    <string name="str_stop_timer">关闭计时器</string>
    <string name="str_viewanimation">视图动画</string>
    <string name="str_drawablenimation">Frame动画(帧动画)</string>
    <string name="str_propertyanimation"> 属性动画</string>

    <string name="str_viewanimation_alpha">透明度</string>
    <string name="str_viewanimation_rotate">旋转</string>
    <string name="str_viewanimation_scale">尺寸伸缩</string>
    <string name="str_viewanimation_translate">位置移动</string>
    <string name="str_start">开始</string>
    <string name="str_stop">结束</string>
    <string name="str_explosion">爆炸</string>
    <string name="str_recover">恢复</string>

    <string name="str_tablayouy_top_scroll">顶部可以滑动</string>
    <string name="str_tablayouy_top_noscroll">顶部不滑动</string>
    <string name="str_tablayouy_bottom_noscroll">居于底部</string>
    <string name="str_page">页面</string>
    <string name="str_open">打开</string>
    <string name="str_close">关闭</string>
    <string name="str_scroll_text">A\nB\nC\nD\nE\nF\nG\nH\nI\nJ\nK\nL\nM\nN\nO\nP\nQ\nR\nS\nT\nU\nV\nW\nX\nY\nZA\nB\nC\nD\nE\nF\nG\nH\nI\nJ\nK\nL\nM\nN\nO\nP\nQ\nR\nS\nT\nU\nV\nW\nX\nY\nZ</string>
    <string name="str_flowchar_tips">支持字符：0-9,a-z,A-Z,-,.</string>
</resources>
