<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tablayout_top_scroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_retangle_white"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/str_tablayouy_top_scroll"
            android:textColor="@color/color_black" />

        <TextView
            android:id="@+id/tv_tablayout_top_noscroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_retangle_white"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/str_tablayouy_top_noscroll"
            android:textColor="@color/color_black" />

        <TextView
            android:id="@+id/tv_tablayout_bottom_scroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_retangle_white"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/str_tablayouy_bottom_noscroll"
            android:textColor="@color/color_black" />
    </LinearLayout>

    <include layout="@layout/layout_tablayout_top_scroll" />

    <include layout="@layout/layout_tablayout_top_noscroll" />

    <include layout="@layout/layout_tablayout_bottom_noscroll" />
</LinearLayout>