<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/shape_retangle_white"
        android:padding="10dp"
        android:text="@string/str_jump"
        android:textColor="@color/color_black" />

    <TextView
        android:id="@+id/tv_jump_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/shape_retangle_white"
        android:padding="10dp"
        android:textColor="@color/color_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_retangle_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_retangle_white"
            android:padding="10dp"
            android:text="@string/str_scheme_authority"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/et_scheme_authoeity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_retangle_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_retangle_white"
            android:padding="10dp"
            android:text="@string/str_scheme_path"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/et_scheme_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_retangle_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shape_retangle_white"
            android:padding="10dp"
            android:text="@string/str_scheme_query"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/et_scheme_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_retangle_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:padding="10dp"
            android:text="@string/str_scheme_fragment"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/et_scheme_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp" />
    </LinearLayout>
</LinearLayout>